feat(experimentalIdentityAndAuth): update `AddAwsRuntimeConfig`
Update `AddAwsRuntimeConfig` to not add the following unless
`@aws.api#service` is applied:

- `awsCheckVersion()`
- `region` config field and extension configuration